--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-# Comment remover for Python
-https://pbizopoulos.github.io/comment-remover
+# Naming convention for python
 
 # Requirements
 POSIX Utilities
@@ -7,13 +6,9 @@ Git
 Docker
 
 # Download
-git clone https://github.com/pbizopoulos/comment-remover
-cd comment-remover/
+git clone https://github.com/pbizopoulos/naming-convention
+cd naming-convention/
 
 # Development
-cd docs/ && make clean check all && cd ..
 cd python/python/ && make clean check all && cd ../..
 cd python/ && make clean check all && cd ..
-
-# Staging
-cd docs/ && make DEBUG=0
