--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Naming convention for python
+# Check naming convention for python
 
 # Requirements
 POSIX Utilities
@@ -6,16 +6,16 @@ Git
 Docker
 
 # Download
-git clone https://github.com/pbizopoulos/naming-convention
-cd naming-convention/
+git clone https://github.com/pbizopoulos/check-naming-convention
+cd check-naming-convention/
 
 # Development
 cd python/python/ && make clean check all && cd ../..
 cd python/ && make clean check all && cd ..
 
 # Installation
-pip install https://github.com/pbizopoulos/naming-convention/tarball/main#subdirectory=python/python
+pip install https://github.com/pbizopoulos/check-naming-convention/tarball/main#subdirectory=python/python
 
 # Usage
-naming_convention main.py
+check_naming_convention main.py
 
