--- a/README
+++ b/README
@@ -7,8 +7,8 @@ Git
 Docker
 
 # Download
-git clone https://github.com/pbizopoulos/check-naming-convention
-cd check-naming-convention/
+git clone https://github.com/pbizopoulos/check-naming-convention $HOME/github.com/pbizopoulos/check-naming-convention
+cd $HOME/github.com/pbizopoulos/check-naming-convention/
 
 # Development
 cd docs/ && make clean check all && cd ..
